# novelai-userscripts-example

./: .env.example  .env.public  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  novelai-userscripts-example.code-workspace  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.claude/: settings.json
docs/: CONTRIBUTING_jp.md  README_jp.md  SECURITY_jp.md  architecture.md
scripts/: example.user.js  generate_cat_garden.py  load-env.ps1  setup-dev-env.ps1
src/javascript/: App.tsx  api.ts
src/javascript/context/: AuthContext.tsx
src/javascript/hooks/: useLocalStorage.ts
src/javascript/pages/: Home.css  Home.tsx  ImageGenerate.css  ImageGenerate.tsx  LLMPage.css  LLMPage.tsx  Login.css  Login.tsx  Metadata.css  Metadata.tsx
src/python/: auth_utils.py  client.py  llm_client.py  llm_models.py  models.py  server.py
src/python/routes/: auth.py  image.py  llm.py  metadata.py  user.py
tests/: _run_subscription_check.py  test_subscription.py
