[project]
name = "novelai-userscripts-example"
version = "0.1.0"
description = "A UI framework example for NovelAI integration using novelai-sdk"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "novelai-sdk>=0.8.1",
    "fastapi[standard]>=0.100.0",
    "python-dotenv>=1.0.0",
    "argon2-cffi>=23.1.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check"
lint-fix = "ruff check --fix"
check = "pyright"
test = "pytest"
pre-commit = ["fmt", "lint", "check"]
serve = "uvicorn python.server:app --app-dir src --host 127.0.0.1 --port 8000"
serve-dev = "uvicorn python.server:app --app-dir src --host 127.0.0.1 --port 8000 --reload"

[tool.ruff]
src = ["src/python"]
target-version = "py310"

[tool.pyright]
pythonVersion = "3.10"
include = ["src/python"]
